--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -2,7 +2,7 @@
     <mat-grid-list cols="2" rowHeight="2:1">
         <mat-grid-tile>
           <p class="video-description">Local:</p>
-          <video #local_video [autoplay]="true" [muted]="true"></video>
+          <video #local_video [autoplay]="true"></video>
         </mat-grid-tile>
         <mat-grid-tile>
           <p class="video-description">Remote:</p>
